# pokemon-python-api

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: on-merge.yaml  on-push.yaml
src/: main.py
src/pokemon_python_api/: main.py
src/pokemon_python_api/models/: pokemon_models.py
src/pokemon_python_api/services/: pokemon_service.py
src/services/: pokemon_service.py
tests/: test_pokemon_service.py
