[tool.poetry]
name = "pokemon-python-api"
version = "0.1.0"
description = "Simple Python API for connecting to the pokemon REST API. Search for pokemon info by name or ID."
authors = ["MrKiplin <https://github.com/MrKiplin>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "~0.115.6"
uvicorn = "~0.34.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-httpx = "^0.35.0"
pytest-asyncio = "^1.1.0"

[tool.poetry.scripts]
start-server = "src.pokemon_python_api.main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
